--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Mauricio Urraco
-description: Jekyll Theme Minimal Resume
+title: Haeri Yoon
+description: Digital Test Engineer at Analog Devices, Inc. 
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I\'m a nomad Software Engineer, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in the <b>crypto-world</b> working for Radix, a London based startup trying to create the next massive scalable DLT. I'm one of the two guys behind all the JS related stuff.
-user_title: Software Engineer
-email: mauriurraco@gmail.com
+username: Haeri Yoon
+user_description: I\'m a <b>Digital Test Engineer</b>, currently working at Analog Devices, Inc. 
+user_title: Digital Test Engineer
+email: celenay16@protonmail.com
 # twitter_username: lorem_ipsum
-# github_username:  lorem_ipsum
+github_username:  haeriy
 # gplus_username:  lorem_ipsum
 
 exclude: ['package.json', 'src' , 'node_modules']
