--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "/resume-site" # the subpath of your site, e.g. /blog
 
 # User settings
 username: Haeri Yoon
-user_description: I'm a <b>Digital Test Engineer</b>, currently working at Analog Devices, Inc. 
+user_description: I'm a <b>Digital Test Engineer</b>, currently working at <b>Analog Devices, Inc</b>. 
 user_title: Digital Test Engineer
 email: celenay16@protonmail.com
 # twitter_username: lorem_ipsum
