--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://haeriy.github.io" #"localhost:3000" # the base hostname & protocol
 
 # User settings
 username: Haeri Yoon
-user_description: I'm a <b>Digital Test Engineer</b>, currently working at <b>Analog Devices, Inc</b>. 
+user_description: I'm a <b>Digital Test Engineer</b>, currently working at Analog Devices, Inc. 
 user_title: Digital Test Engineer
 email: celenay16@protonmail.com
 # twitter_username: lorem_ipsum
