--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Haeri Yoon
 description: Digital Test Engineer at Analog Devices, Inc. 
-baseurl: "/resume-site/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://haeriy.github.io" #"localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
